correction z-index loader

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -246,7 +246,7 @@ main {
     bottom: 0;
     right: 0;
     animation: spin 1.5s linear 0s forwards;
-    z-index: 2;
+    z-index: -2;
 
 }
 
